--- a/web-app/index.html
+++ b/web-app/index.html
@@ -6,7 +6,7 @@
     <title>SEMOTrackIt - Shuttle Tracking App</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="assets/favicon.png">
+    <link rel="icon" href="assets/semo_bird.png">
     <!-- Added for confetti effect -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
