--- a/web-app/index.html
+++ b/web-app/index.html
@@ -77,24 +77,22 @@
             <div class="login-header">
                 <img src="assets/Southeast_Missouri_State_Redhawks_logo.svg.png" alt="SEMO Logo" class="login-logo">
                 <h2 id="pageTitle">Welcome to SEMOTrackIt</h2>
-                <p>Login with your SEMO student credentials</p>
+                <p>Sign in with your SEMO Microsoft account</p>
             </div>
             <form id="authForm">
                 <div class="form-group">
-                    <label for="email">SEMO Email:</label>
-                    <input type="email" id="email" placeholder="yourname@live.semo.edu" required>
+                    <label for="email">SEMO Microsoft Email:</label>
+                    <input type="email" id="email" placeholder="student@semo.edu or student@live.semo.edu" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password:</label>
-                    <input type="password" id="password" placeholder="Enter your password" required>
+                    <input type="password" id="password" placeholder="Enter any password" required>
                 </div>
-                <button type="submit" id="authBtn" class="fun-btn">Login</button>
-                <button type="button" id="toggleAuth">New to SEMOTrackIt? Sign Up</button>
-                <!-- Added spinner for loading -->
+                <button type="button" id="authBtn" class="fun-btn ms-login-btn" style="width: 100%;">Sign in with Microsoft (Demo)</button>
                 <div id="spinner" class="spinner" style="display:none;"></div>
             </form>
             <div class="login-footer">
-                <p>For demo purposes only. Real authentication coming soon!</p>
+                <p>Demo only - validates SEMO email domain. No data stored on server.</p>
             </div>
         </div>
     </div>
